tests/fixtures/invalid/none_in_str.py
# Cannot use 'in' with None and Str
x: bool = None in "hello"
